--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/aaqib90/nodejs-db2-query-api#readme",
   "dependencies": {
-    "ibm_db": "^2.7.0"
+    "ibm_db": "^2.7.0",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
   }
 }
